final front end

--- a/resume_portfolio.html
+++ b/resume_portfolio.html
@@ -61,6 +61,10 @@
             </i>
             <div class="devider-line-four mb-4">
             </div>
+            <!-- modal section one-->
+            <div class="bleft py-2">
+               <h4 class="ac">graphics</h4>
+            </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid" src="images/avatar.jpg"></a>
@@ -83,6 +87,64 @@
                   <a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/avatar.jpg"></a>
                </div>
             </div>
+            <!-- modal section one-->
+
+            <!-- modal section two-->
+            <div class="bleft py-2 mt-5">
+               <h4 class="ac">web designs</h4>
+            </div>
+            <div class="row">
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid" src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/avatar.jpg"></a>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal4"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/avatar.jpg"></a>
+               </div>
+            </div>
+            <!-- modal section two-->
+
+            <!-- modal section three-->
+            <div class="bleft py-2 mt-5">
+               <h4 class="ac">js/sql/php</h4>
+            </div>
+            <div class="row">
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid" src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/avatar.jpg"></a>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal4"><img src="images/avatar.jpg"></a>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/avatar.jpg"></a>
+               </div>
+            </div>
+            <!-- modal section three-->
+
             <!-- The Modal -->
             <div class="modal fade" id="myModal">
                <div class="modal-dialog modal-xl">
