--- a/resume_portfolio.html
+++ b/resume_portfolio.html
@@ -12,8 +12,9 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="stylesheet" type="text/css" href="css/animation.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
    </head>
    <body data-spy="scroll" data-target=".navbar" data-offset="50">
       <!-- navigation -->
@@ -67,24 +68,24 @@
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid slideInDown" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid animated delay-1s slideInDown" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid slideInUp" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid animated delay-1s slideInUp" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <!-- modal section one-->
@@ -95,24 +96,24 @@
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid slideInDown" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid animated delay-1s slideInDown" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid slideInUp" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid animated delay-1s slideInUp" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <!-- modal section two-->
@@ -123,24 +124,24 @@
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid slideInDown" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal1"><img class="img-fluid animated delay-1s slideInDown" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <div class="row">
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid slideInLeft" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-fluid animated delay-1s slideInLeft" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid slideInUp" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-fluid animated delay-1s slideInUp" src="images/avatar.jpg"></a>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid slideInRight" src="images/avatar.jpg"></a>
+                  <a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-fluid animated delay-1s slideInRight" src="images/avatar.jpg"></a>
                </div>
             </div>
             <!-- modal section three-->
